package main

import (
    "context"
    "files-management/proto/gen"
    "testing"
)

type MockFileService struct{}

func (m *MockFileService) OpenFile(ctx context.Context, in *gen.FileRequest) (*gen.FileResponse, error) {
	// Implement the behavior you want to test here
	// For example, return a predefined response for testing
	return &gen.FileResponse{Content: []byte("test content")}, nil
}

func TestMain(t *testing.T) {
	// Replace your main logic with the modified mainWithServer function
	// Pass the MockFileService instance to simulate the gRPC server
	mainWithServer(&MockFileService{})

	// Perform assertions or checks based on your test scenario
	// For example, you can make gRPC requests to the server here
	// and use assert functions to validate the results.
}
